<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="70dp"
    android:layout_marginBottom="70dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">

    <com.makeramen.roundedimageview.RoundedImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/brown_background"
        app:riv_corner_radius="90dip"
        app:riv_corner_radius_bottom_left="30dp"
        app:riv_corner_radius_bottom_right="30dp"
        app:riv_corner_radius_top_left="30dp"
        app:riv_corner_radius_top_right="30dp"
        app:riv_mutate_background="true" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/transparent"
        android:onClick="onClickClose"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:src="@drawable/icons8_cancel_64"
        app:tint="@color/cream" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input_text"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/nome"
        android:fontFamily="@font/voces"
        android:textColorHint="@color/cream"
        android:layout_below="@+id/back_button"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        app:boxStrokeColor="@color/cream"
        app:endIconTint="@color/cream">

        <AutoCompleteTextView
            android:id="@+id/name_auto_complete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/transparent"
            android:fontFamily="@font/voces"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_archetype_text"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/archetipo"
        android:fontFamily="@font/voces"
        android:textColorHint="@color/cream"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/name_input_text"
        app:boxStrokeColor="@color/cream"
        app:endIconTint="@color/cream"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/archetype_auto_complete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/transparent"
            android:fontFamily="@font/voces"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_duelist_text"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/duellante"
        android:fontFamily="@font/voces"
        android:textColorHint="@color/cream"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/name_archetype_text"
        app:boxStrokeColor="@color/cream"
        app:endIconTint="@color/cream"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/duelist_auto_complete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/transparent"
            android:fontFamily="@font/voces"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_set_text"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/set_name"
        android:fontFamily="@font/voces"
        android:textColorHint="@color/cream"
        android:layout_below="@+id/name_duelist_text"
        app:boxStrokeColor="@color/cream"
        app:endIconTint="@color/cream"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/set_auto_complete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/transparent"
            android:fontFamily="@font/voces"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/in_transit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_set_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeMinTextSize="8sp"
        android:buttonTint="@color/cream"
        android:fontFamily="@font/voces"
        android:text="@string/in_transito"
        android:textColor="@color/cream" />

    <TextView
        android:id="@+id/cardmarket_price"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/in_transit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeMinTextSize="8sp"
        android:fontFamily="@font/voces"
        android:text="@string/prezzo_cardmarket"
        android:textColor="@color/cream" />

    <ImageButton
        android:id="@+id/modify_button"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/in_transit"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
        tools:ignore="ContentDescription" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/modify_button"
        android:fontFamily="@font/voces"
        android:layout_marginTop="10dp"
        android:textColor="@color/main_brown"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/cardmarket_price"
        android:text="@string/modifica"/>

</RelativeLayout>