<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/pricey"
        android:layout_alignBottom="@+id/pricey"
        android:autoSizeMaxTextSize="16sp"
        android:autoSizeMinTextSize="10dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/voces"
        android:gravity="center_vertical"
        android:text="@string/name"
        android:textAllCaps="true"
        android:textColor="@color/main_brown"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/archetype"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_alignTop="@+id/inTransit"
        android:layout_alignBottom="@+id/inTransit"
        android:layout_marginTop="10dp"
        android:autoSizeMaxTextSize="14sp"
        android:autoSizeMinTextSize="10dp"
        android:fontFamily="@font/voces"
        android:gravity="center_vertical"
        android:text="@string/archetype"
        android:textColor="@color/main_brown" />

    <TextView
        android:id="@+id/duelist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/pricey"
        android:layout_alignBottom="@+id/pricey"
        android:layout_marginStart="15dp"
        android:layout_toStartOf="@+id/pricey"
        android:layout_toEndOf="@+id/name"
        android:fontFamily="@font/voces"
        android:gravity="center_vertical"
        android:text="@string/duelist"
        android:textColor="@color/main_brown"
        android:autoSizeMaxTextSize="14sp"
        android:autoSizeMinTextSize="10dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_alignTop="@+id/inTransit"
        android:layout_alignBottom="@+id/inTransit"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_toStartOf="@+id/pricey"
        android:layout_toEndOf="@+id/archetype"
        android:autoSizeMaxTextSize="14sp"
        android:autoSizeMinTextSize="10dp"
        android:fontFamily="@font/voces"
        android:gravity="center_vertical"
        android:text="@string/set"
        android:textColor="@color/main_brown" />

    <RelativeLayout
        android:id="@+id/pricey"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/pricey_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/icons8_euro_100"
            android:backgroundTint="@color/goldenrod" />

        <TextView
            android:id="@+id/pricey_text"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@+id/pricey_image"
            android:gravity="center_horizontal"
            android:text="2,00"
            android:textColor="@color/goldenrod"
            android:textSize="8sp" />

    </RelativeLayout>


    <ImageView
        android:id="@+id/inTransit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/pricey"
        android:layout_alignParentEnd="true"
        app:srcCompat="@drawable/icons8_delivering_64"
        app:tint="@color/main_brown" />

    <ImageView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/inTransit"
        android:background="#0D4360"
        android:foregroundTint="#0D4360"
        android:layout_marginTop="7dp"
        app:tint="#0D4360"
        app:srcCompat="@android:drawable/bottom_bar" />


</RelativeLayout>