<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/brown_background"
    tools:context=".activities.MenuActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/voces"
        android:textColor="@color/white_semitransparent"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:text="@string/card_tracking_system"/>

    <ImageButton
        android:id="@+id/refresh_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/transparent"
        android:backgroundTint="@color/cream"
        android:onClick="onClickRefreshActivity"
        android:src="@drawable/icons8_ritorno_48"
        android:visibility="invisible"
        app:tint="@color/cream"
        tools:ignore="UsingOnClickInXml" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_input_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textColorHint="@color/cream"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        app:backgroundTint="@color/cream"
        android:layout_toStartOf="@+id/refresh_button"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:visibility="invisible"
        tools:ignore="PrivateResource">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cerca"
            android:inputType="text"
            android:textColor="@color/cream"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filter_dropdown"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:hint="@string/filtra_per"
        android:background="@drawable/filter_spinner_dropdown_bg"
        android:layout_alignParentStart="true"
        app:boxBackgroundColor="@color/cream"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:endIconDrawable="@drawable/icons8_downward_arrow_24"
        app:endIconTint="@color/main_brown"
        android:textColorHint="@color/main_brown"
        android:visibility="invisible"
        android:layout_toStartOf="@+id/child_filter_dropdown"
        >

        <AutoCompleteTextView
            android:id="@+id/filter_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            android:textColor="@color/main_brown"
            android:fontFamily="@font/voces"
            android:dropDownSelector="@drawable/filter_spinner_dropdown_bg"
            android:ellipsize="end"
            tools:text="Scegli campo"
            android:maxLines="1"
            android:singleLine="true"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/child_filter_dropdown"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_alignTop="@+id/filter_dropdown"
        android:hint="@string/filtra_per"
        android:background="@drawable/filter_spinner_dropdown_bg"
        app:boxBackgroundColor="@color/cream"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:endIconDrawable="@drawable/icons8_downward_arrow_24"
        app:endIconTint="@color/main_brown"
        android:textColorHint="@color/main_brown"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/refresh_button"
        android:visibility="invisible"
        >

        <AutoCompleteTextView
            android:id="@+id/child_filter_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textColor="@color/main_brown"
            android:fontFamily="@font/voces"
            android:dropDownSelector="@drawable/filter_spinner_dropdown_bg"
            android:ellipsize="end"
            tools:text="Scegli campo"
            android:maxLines="1"
            android:singleLine="true"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/child_filter_dropdown"
        android:background="@drawable/recycler_background"
        android:layout_marginTop="10dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/card_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/child_filter_dropdown"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="80dp" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/brown_background"
        app:riv_mutate_background="true"
        app:riv_corner_radius="90dip"
        app:riv_corner_radius_top_left="20dp"
        app:riv_corner_radius_top_right="20dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/filter_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@color/transparent"
            android:onClick="onClickFilter"
            android:src="@drawable/icons8_funnel_64"
            app:tint="@color/cream"
            tools:ignore="UsingOnClickInXml" />

        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:background="@color/transparent"
            android:backgroundTint="@color/cream"
            android:onClick="onClickSearch"
            android:src="@drawable/icons8_search_64"
            app:tint="@color/cream"
            tools:ignore="UsingOnClickInXml" />

        <ImageButton
            android:id="@+id/add_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="35dp"
            android:background="@color/transparent"
            android:backgroundTint="@color/cream"
            android:onClick="onClickAdd"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:src="@drawable/icons8_plus_64"
            app:tint="@color/cream"
            tools:ignore="UsingOnClickInXml" />

    </RelativeLayout>

</RelativeLayout>